--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        li:first-child{
+            color: red;
+        }
+        li:last-child{
+            color: blue;
+        }
+        li:nth-child(2n){
+            color: brown;
+        }
+        h1::before{
+            content: "tader sathe";
+            color: aqua;
+        }
+        h1::after{
+            content: "amar tumi";
+            color: blueviolet;
+        }
+    </style>
 </head>
-<body> 
+<body>
+    <h1>valo lage</h1>
+    <ul>
+        <li>rumana</li>
+        <li>eva</li>
+        <li>najma</li>
+        <li>sarmin</li>
+        <li>rina</li>
+        <li>nahida</li>
+    </ul> 
 
 
     
